--- a/code/index.html
+++ b/code/index.html
@@ -48,23 +48,23 @@
     <div class="container">
 
       <!-- The big news content -->
-      <section class="big-news">
-        <article class="grid-big-news">
-          <div class="big-news-image">
-            <img class="big-image" src="https://images.unsplash.com/photo-1476231682828-37e571bc172f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1567&q=80" alt="#"/>
+      <section class="hero-news">
+        <article class="hero-news-grid">
+          <div class="hero-news-image">
+            <img class="hero-image" src="https://images.unsplash.com/photo-1476231682828-37e571bc172f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1567&q=80" alt="#"/>
           </div>
 
-          <div class="big-news-text">
-            <h1 class="big-headline-1">This is a headline</h1>
-            <p class="paragraph-big-1">
+          <div class="hero-text">
+            <h1 class="hero-headline-1">This is a headline</h1>
+            <p class="hero-paragraph-1">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Venenatis cras sed felis eget velit aliquet sagittis id.
             </p>
-            <h1 class="big-headline-2">This is another headline</h1>
-            <p class="paragraph-big-2">
+            <h1 class="hero-headline-2">This is another headline</h1>
+            <p class="hero-paragraph-2">
               Nam aliquam sem et tortor consequat. Volutpat consequat mauris nunc congue. Pretium nibh ipsum consequat nisl vel.  
             </p>
-            <h1 class="big-headline-3">This is also a headline</h1>
-            <p class="paragraph-big-3">
+            <h1 class="hero-headline-3">This is also a headline</h1>
+            <p class="hero-paragraph-3">
               Rhoncus dolor purus non enim praesent elementum facilisis leo. Nisi est sit amet facilisis. Elementum nibh tellus molestie nunc.
             </p>
           </div>
