--- a/code/index.html
+++ b/code/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">    <meta name="viewport" content= "width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;800&family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">    <meta name="viewport" content= "width=device-width, initial-scale=1.0">
   </head>
   <body>
     <header>
@@ -47,74 +47,50 @@
       <div class="news-cards-child green">
         <h4>SUBJECT</h4>
         <img class="news-img" src="https://picsum.photos/250/125" alt="random photo" />
-        <h2>Duis aute irure dolor in reprehenderit in voluptate</h2>
+        <h2>Duis aute irure dolor in repre hende rit in voluptate</h2>
         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       <div class="news-cards-child red">
         <h4>SUBJECT</h4>
         <img class="news-img" src="https://picsum.photos/400/200" alt="random photo" />
-        <h2>Duis aute irure dolor in reprehenderit in voluptate</h2>
+        <h2>Duis aute irure dolor in repre hende rit in voluptate</h2>
         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       <div class="news-cards-child blue">
         <h4>SUBJECT</h4>
         <img class="news-img" src="https://picsum.photos/500/250" alt="random photo" />
-        <h2>Duis aute irure dolor in reprehenderit in voluptate</h2>
+        <h2>Duis aute irure dolor in repre hende rit in voluptate</h2>
         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       <div class="news-cards-child green">
         <h4>SUBJECT</h4>
         <img class="news-img" src="https://picsum.photos/600/300" alt="random photo" />
-        <h2>Duis aute irure dolor in reprehenderit in voluptate</h2>
+        <h2>Duis aute irure dolor in repre hende rit in voluptate</h2>
         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       <div class="news-cards-child red">
         <h4>SUBJECT</h4>
         <img class="news-img" src="https://picsum.photos/450/225" alt="random photo" />
-        <h2>Duis aute irure dolor in reprehenderit in voluptate</h2>
+        <h2>Duis aute irure dolor in repre hende rit in voluptate</h2>
         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       <div class="news-cards-child orange">
         <h4>SUBJECT</h4>
         <img class="news-img" src="https://picsum.photos/350/175" alt="random photo" />
-        <h2>Duis aute irure dolor in reprehenderit in voluptate</h2>
+        <h2>Duis aute irure dolor in repre hende rit in voluptate</h2>
         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       <div class="news-cards-child green">
         <h4>SUBJECT</h4>
         <img class="news-img" src="https://picsum.photos/480/240" alt="random photo" />
-        <h2>Duis aute irure dolor in reprehenderit in voluptate</h2>
+        <h2>Duis aute irure dolor in repre hende rit in voluptate</h2>
         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       <div class="news-cards-child pink">
         <h4>SUBJECT</h4>
         <img class="news-img" src="https://picsum.photos/460/230" alt="random photo" />
-        <h2>This is a headline size two</h2>
-        <p>This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph.</p>
-      </div>
-      <div class="news-cards-child blue">
-        <h4>SUBJECT</h4>
-        <img class="news-img" src="https://picsum.photos/440/220" alt="random photo" />
-        <h2>This is a headline size two</h2>
-        <p>This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph.</p>
-      </div>
-      <div class="news-cards-child green">
-        <h4>SUBJECT</h4>
-        <img class="news-img" src="https://picsum.photos/320/160" alt="random photo" />
-        <h2>This is a headline size two</h2>
-        <p>This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph.</p>
-      </div>
-      <div class="news-cards-child red">
-        <h4>SUBJECT</h4>
-        <img class="news-img" src="https://picsum.photos/360/180" alt="random photo" />
-        <h2>This is a headline size two</h2>
-        <p>This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph.</p>
-      </div>
-      <div class="news-cards-child blue">
-        <h4>SUBJECT</h4>
-        <img class="news-img" src="https://picsum.photos/340/170" alt="random photo" />
-        <h2>This is a headline size two</h2>
-        <p>This is a paragraph. This is a paragraph. This is a paragraph. This is a paragraph.</p>
+        <h2>Duis aute irure dolor in repre hende rit in voluptate</h2>
+        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       
 
