changing the main banner responsivness

--- a/code/index.html
+++ b/code/index.html
@@ -73,15 +73,15 @@
           </li>
         </ul>
       </div>
-      <div class="sizing-wrapper">
+      <div class="sizing-wrapper text-spacing">
         <p class="article-text">
-          <b class="article-title">Teamwork is critical to agile projects!</b> Creating good products requires
-          cooperation among all the members of the project team, including customers and stakeholders. Agile approaches
-          support team-building and teamwork, and they emphasize trust in
-          self-managing development teams. A skilled,
-          motivated, unified, and empowered project team is a successful team.
-          <a href="https://www.dummies.com/careers/project-management/use-agile-principles-teamwork-project/"
-            target="blank" alt="read more">Read more...</a>
+        <h3 class="article-title">Teamwork is critical to agile projects!</h3> Creating good products requires
+        cooperation among all the members of the project team, including customers and stakeholders. Agile approaches
+        support team-building and teamwork, and they emphasize trust in
+        self-managing development teams. A skilled,
+        motivated, unified, and empowered project team is a successful team.
+        <a href="https://www.dummies.com/careers/project-management/use-agile-principles-teamwork-project/"
+          target="blank" alt="read more">Read more...</a>
         </p>
       </div>
     </article>
