images moved under the code folder

--- a/code/index.html
+++ b/code/index.html
@@ -20,7 +20,7 @@
 
     <nav class="navigation">
       <div class="arch-mag">
-        <img class="logo" src="../images/am-logo.png" alt="Logo">
+        <img class="logo" src="./images/am-logo.png" alt="Logo">
         <h1> ARCHitecture MAGazine</h1>
       </div>
 
@@ -45,7 +45,7 @@
 
   <section class="big-news">
 
-    <img class="big-news-image" src="../images/fran.jpg" alt="Fran">
+    <img class="big-news-image" src="./images/fran.jpg" alt="Fran">
     <h2 class="big-news-text"> <em> 
       This week a redesign of the Hadid`s building by Henry Rogers was announced!</em> <br>
       <br> This week on ARCHMAG, insurance company Hadid`s of London revealed it would overhaul the iconic Underwriting
@@ -65,45 +65,45 @@
 
     <div class="card">
       <h4>AWARDS</h4>
-      <img class="news-image" src="../images/adrien.jpg" alt="Adrien">
+      <img class="news-image" src="./images/adrien.jpg" alt="Adrien">
       <p>Although the architect was based on a classical structure for the design of the house, changed the original by making 
         the garden participate actively in the composition of the house concept.  <br>
         <a href="#">Read more >></a> </p>
     </div>
     <div class="card">
       <h4>DESIGN</h4>
-      <img class="news-image" src="../images/chris.jpg" alt="Chris">
+      <img class="news-image" src="./images/chris.jpg" alt="Chris">
       <p>For coffered ceiling inside the entrance atrium architect first used in domestic architecture, glass block ceiling. <br> <a href="#">Read more >></a> </p>
     </div>
     <div class="card">
       <h4>INTERIOR</h4>
-      <img class="news-image" src="../images/martin.jpg" alt="Martin">
+      <img class="news-image" src="./images/martin.jpg" alt="Martin">
       <p>On the street facade highlights the many tall windows with white woodwork and shutters in one sector and the other cut on the stone.  <br><a href="#">Read more >></a> </p>
     </div>
     <div class="card">
       <h4>INTERIOR</h4>
-      <img class="news-image" src="../images/knubb.jpg" alt="knubb">
+      <img class="news-image" src="./images/knubb.jpg" alt="knubb">
       <p>These two contrasting spaces that complement each other perfectly are created by an arched volume of wood. <br> <a href="#">Read more >></a> </p>
     </div>
     <div class="card">
       <h4>NEWS</h4>
-      <img class="news-image" src="../images/pawel.jpg" alt="Pawel">
+      <img class="news-image" src="./images/pawel.jpg" alt="Pawel">
       <p>The long, narrow site designated for the new library presented some technical challenges, including the need to consider the future construction of a tunnel. <br> <a href="#">Read more >></a> </p>
     </div>
     <div class="card">
       <h4>AWARDS</h4>
-      <img class="news-image" src="../images/pierre.jpg" alt="Pierre">
+      <img class="news-image" src="./images/pierre.jpg" alt="Pierre">
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et accumsan quam, sed rutrum neque. Nulla ac
         orci consequat, consectetur quam et, sodales turpis. <br> <a href="#">Read more >></a> </p>
     </div>
     <div class="card">
       <h4>DESIGN</h4>
-      <img class="news-image" src="../images/roman.jpg" alt="Roman">
+      <img class="news-image" src="./images/roman.jpg" alt="Roman">
       <p>The building is a public space owned by citizens and open to all people. Its design was done by encouraging active participation among residents and partners. <br> <a href="#">Read more >></a> </p>
     </div>
     <div class="card">
       <h4>OFFICE</h4>
-      <img class="news-image" src="../images/patrick.jpg" alt="Patrick">
+      <img class="news-image" src="./images/patrick.jpg" alt="Patrick">
       <p>The combination of its steel and glass structure with the wood of the facade results in a striking building. <br><a href="#">Read more >></a> </p>
     </div>
   </section>
