--- a/code/index.html
+++ b/code/index.html
@@ -33,15 +33,15 @@
 
       <div class="navigation">
         <nav>
-          <li><a class="navigation-link" href="#">Home</a></li>
-          <li><a class="navigation-link" href="#">About us</a></li>
-          <li><a class="navigation-link" href="#">Contact</a></li>
+          <li><a class="navigation-link" href="#main-news">Main</a></li>
+          <li><a class="navigation-link" href="#small-news">News snippets</a></li>
+          <li><a class="navigation-link" href="#foot">Contact</a></li>
         </nav>
       </div>
     </header>
 
     <!-- source: https://www.bbc.com/news/world-us-canada-58208792 -->
-    <section class="big-news">
+    <section class="big-news"  id="main-news">
       <div class="big-news-article">
         <img src="https://images.unsplash.com/photo-1615092296061-e2ccfeb2f3d6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80" 
         alt="A forest on fire"> 
@@ -71,7 +71,7 @@
 
     </section>
 
-    <section class="news-snippets-container">
+    <section class="news-snippets-container" id="small-news">
       
       <!-- source: https://www.bbc.com/news/world-asia-china-58156099 -->
       <div class="news-snippets">
@@ -155,11 +155,13 @@
 
     </section>
 
-    <footer>
+    <footer id="foot">
       <p>Made by Sofia Willebrand 🐘 </p>
-      <li><a href="https://www.linkedin.com/in/sofia-willebrand/" target="_blank"><i class="fa fa-linkedin-square" style="font-size:24px"></i></a></li>
-      <li><a href="https://github.com/sofiawillebrand" target="_blank"><i class="fa fa-github" style="font-size:24px"></i></a></li>
-      <li><a href="https://stackoverflow.com/users/7478955/sofia-willebrand" target="_blank"><i class="fa fa-stack-overflow" style="font-size:24px"></i></a></li>
+      <div class="nav-socials">
+          <li><a class="navigation-link" href="https://www.linkedin.com/in/sofia-willebrand/" target="_blank"><i class="fa fa-linkedin-square" style="font-size:24px"></i></a></li>
+          <li><a class="navigation-link" href="https://github.com/sofiawillebrand" target="_blank"><i class="fa fa-github" style="font-size:24px"></i></a></li>
+          <li><a class="navigation-link" href="https://stackoverflow.com/users/7478955/sofia-willebrand" target="_blank"><i class="fa fa-stack-overflow" style="font-size:24px"></i></a></li>
+      </div>
     </footer>
   </body>
 </html>
