--- a/code/index.html
+++ b/code/index.html
@@ -24,7 +24,7 @@
       <a class="hidden-logo-one" href="#"><img class="logo-desktop aligning" src="logo-pics/clear.svg"
           alt="logo-desktop" /></a>
       <a class="hidden-logo-two" href="#"><img class="logo-tablets-and-mobiles aligning"
-          src="logo-pics/vector/logo-original.svg" alt="logo-other" /></a>
+          src="logo-pics/logo-original.svg" alt="logo-other" /></a>
       <ul class="navlinks-container list">
         <li class="aligning" label="nav-links"><a href="#" class="nav-links" alt="home">Home</a></li>
         <li class="aligning" label="nav-links"><a href="#" class="nav-links" alt="more">More</a></li>
