added box shadow to main image

--- a/code/index.html
+++ b/code/index.html
@@ -117,6 +117,7 @@
   </section>
 
   <footer>
+    <h4>CONTACT US!</h4>
     <section class ="footer-container">
       <a href="#" class="fa fa-facebook"></a>
       <a href="#" class="fa fa-twitter"></a>
