Cleaned up code in tablet and mobile styling

--- a/code/index.html
+++ b/code/index.html
@@ -15,7 +15,7 @@
   <body>
     <!-- Header including navigation and logo -->
       <header>
-        <nav class="navigation">
+        <nav>
           <a href="#">Latest news</a>
           <a href="#">Local blog</a>
           <img class="logo" src=images/36.jpg alt="Small town logo"/>
