--- a/code/eastward.html
+++ b/code/eastward.html
@@ -27,7 +27,7 @@
 
     <section class="big-news">
             <!-- The big news content -->
-        <img class="big-image" src="https://www.gamereactor.se/media/49/eastward_2574953.png">
+        <img class="big-image" src="https://media.istockphoto.com/vectors/pixel-art-game-location-vector-id910093098?s=612x612">
       <div class="big-text">
         <h3>NEXT STOP, EASTWARD</h3>
         <p>Escape the tyrannical clutches of a subterranean society and join Eastward’s 
