--- a/code/fez.html
+++ b/code/fez.html
@@ -27,7 +27,7 @@
 
     <section class="big-news">
             <!-- The big news content -->
-        <img class="big-image" src="https://cdn.mos.cms.futurecdn.net/94319a179e1903d83902f6855a711120-1200-80.jpg">
+        <img class="big-image" src="https://media.istockphoto.com/vectors/pixel-art-game-location-vector-id910093098?s=612x612">
       <div class="big-text">
         <h3>FEZ!</h3>
         <p>Gomez is a 2D creature living in a 2D world. Or is he? When the existence 
