--- a/code/index.html
+++ b/code/index.html
@@ -15,7 +15,7 @@
     <a href="./index.html">
       <img class="logo" src="./pixelburger.png" alt="burger">
     </a>
-  </header>
+  
       <nav class="navigation">
         <li class="nav-item">
         <a href="./about.html">ABOUT</a>
@@ -24,11 +24,11 @@
         <a href="./contact.html">CONTACT</a>
       </li>
       </nav>
-  
+    </header>
 
     <section class="big-news">
             <!-- The big news content -->
-        <img class="big-image" src="https://cdn.cloudflare.steamstatic.com/steam/apps/1614890/capsule_616x353.jpg?t=1627576274">
+        <img class="big-image" src="https://media.istockphoto.com/photos/vintage-pacman-video-game-picture-id157739391?s=612x612">
       <div class="big-text">
         <h3>BALDO</h3>
         <p>A prophecy came true, the pure child is born. The no-heart creature 
@@ -48,7 +48,7 @@
       <!-- The other news-->
       <div class="small-news-text">
       <a class="small-image" href="./eastward.html">
-        <img class="small" src="https://assets1.ignimgs.com/2019/08/23/eastward---button-fin-1566519472279.jpg">
+        <img class="small" src="https://media.istockphoto.com/vectors/retro-80s-background-vector-id906016638?k=20&m=906016638&s=612x612&w=0&h=8nqhMSj1OfuKzgH2xbBLormlSI5HPV05kZsOb4zTr4I=">
       </a>    
         <h4>EASTWARD</h4>
         <p>Discover the weird, 
@@ -57,7 +57,7 @@
         </div>    
         <div class="small-news-text">
       <a class="small-image" href="./nino-kuni.html">
-        <img class="small" src="https://cdns.kinguin.net/media/catalog/category/cache/1/hi_image/9df78eab33525d08d6e5fb8d27136e95/nino8.jpg">
+        <img class="small" src="https://media.istockphoto.com/vectors/retro-arcade-machine-vector-illustration-vector-id1098049814?k=20&m=1098049814&s=612x612&w=0&h=OKcnSXpRz_RrfAdQZ1BkmJ0uDYRATLUkwcT5WJRaR-g=">
       </a>
         <h4>NINO-KUNI</h4>
         <p>Journey to the other 
@@ -66,7 +66,7 @@
       </div>
       <div class="small-news-text">
       <a class="small-image" href="./fez.html">
-        <img class="small" src="https://images.nintendolife.com/fb2e057967efd/fez-cover.cover_large.jpg">
+        <img class="small" src="https://media.istockphoto.com/vectors/vintage-video-space-arcade-game-vector-pixel-design-with-spaceship-vector-id938636018?k=20&m=938636018&s=612x612&w=0&h=aA6HnpsKlYJfy-VkVHkdGRK3v0lFxDtzKMDKI0SpRK8=">
       </a>  
         <h4>FEZ</h4>
         <p>Gomez is a 2D creature 
@@ -75,7 +75,7 @@
     </div>
     <div class="small-news-text">
       <a class="small-image" href="./narita-boy.html">
-        <img class="small"src="https://assets-prd.ignimgs.com/2021/02/05/narita-boy-button-01-1612487969751.jpg">
+        <img class="small"src="https://media.istockphoto.com/vectors/pixel-space-monsters-arcade-video-games-robots-retro-game-invaders-vector-id1096922614?k=20&m=1096922614&s=612x612&w=0&h=16IX3KJS9lAciRxP0rkBPS65hAejRe7dLlDOFVs63iU=">
       </a>
         <h4>NARITA-BOY</h4>
         <p>“Narita Boy” – the retro-
@@ -84,9 +84,9 @@
     </section>
       
     <footer>
-      <nav class="navigation">
+      <nav class="navigation-bottom">
         <li class="nav-item">
-        <a href="./about.html">ABOUT</a>
+        <a href="about.html">ABOUT</a>
       </li>
       <li class="nav-item">
         <a href="./contact.html">CONTACT</a>
