--- a/code/narita-boy.html
+++ b/code/narita-boy.html
@@ -27,7 +27,7 @@
 
     <section class="big-news">
             <!-- The big news content -->
-        <img class="big-image" src="https://www.gamereactor.se/media/77/naritaboy_3427763.png">
+        <img class="big-image" src="https://media.istockphoto.com/vectors/pixel-art-game-location-vector-id910093098?s=612x612">
       <div class="big-text">
         <h3>NARITA-BOY</h3>
         <p>Narita Boy becomes a tremendous hit! Copies of cartridges are flying off physical
