--- a/code/index.html
+++ b/code/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: birdviews</title>
     <link rel="stylesheet" href="./style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@300&display=swap" rel="stylesheet">
 
 
   </head>
@@ -118,6 +118,10 @@
     </div>
   
   </section>
+
+  <footer>
+    <p>All rights reserved by the bird community. <br><i>To contact us just <b>twitter</b></i></p>
+  </footer>
   
 </body>
 </html>
