changed animation and shadow

--- a/code/index.html
+++ b/code/index.html
@@ -23,54 +23,17 @@
     </nav>
   </header>
   <hr>
-  <!--
-  <section class="big-news">
-    
-    <img class="big-news-picture" src="croatia.jpg" alt="big news" />
-    <div class="big-news-text-block">
-      <p class="big-news-text">
-        Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to
-        emphasise design elements over content.Lorem ipsum is a pseudo-Latin text used in web design, typography,
-        layout, and printing in place of English to
-        emphasise design elements over content.Lorem ipsum is a pseudo-Latin text used in web design, typography,
-        layout, and printing in place of English to
-        emphasise design elements over content.
-      </p>
-    </div>
-  </section>
-  <div class="container grid">
-    <div class="cell"><img src="taliban.jpg" alt="taliban"></div>
-    <div class="cell"><img src="taliban.jpg" alt="taliban"></div>
-  </div>
-  <section class="flex-box">
-    <div class="flex-child-blue">
-      <img src="rainfall.jpg" alt="Germany">
-      <p>Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to
-        emphasise design elements over content.
-      </p>
-      <button>read more</button>
-    </div>
-    <div class="flex-child-blue">
-      <p>Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to
-        emphasise design elements over content.
-      </p>
-      <button>read more</button>
-    </div>
-  </section>--->
 
   <section class="big-news">
     <!-- The big news content -->
-    <img class="big-news-picture" src="./seaburn.jpeg" alt="big news" />
-    <div class="big-news-text-block">
-      <h2 class="big-news-title">The Bigg news</h2>
-      <p class="big-news-text">
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit recusandae libero est, suscipit hic omnis quam
-        iure expedita asperiores pariatur voluptatibus soluta. Dolorem aut sapiente culpa, dolore id architecto, facilis
-        dicta animi cupiditate maiores facere unde inventore in ducimus, cumque nam vero corrupti. Tempora cupiditate
-        cum numquam sit quas consequuntur!
-      </p>
-    </div>
+    <img class="big-news-image" src="./seaburn.jpeg" alt="big news" />
+    <h2 class="big-news-title">Bigg news</h2>
+    <p class="big-news-text">
+      Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to
+      emphasise design elements over content.
+    </p>
   </section>
+
   <hr>
   <section class="flex-parent">
     <div class="flex-child-blue">
@@ -122,6 +85,7 @@
         emphasise design elements over content.</p>
       <button>read more</button>
     </div>
+
   </section>
 </body>
 
