display multiple cards in a row on mobile screens

--- a/code/index.html
+++ b/code/index.html
@@ -4,19 +4,98 @@
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">  
   </head>
+  
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+        <img class="logo" src="./img/logo.png" alt="logo"/>
+<div class="navbar">
+  <li class="list"> <a class="link" href="#home">Home</a></li>
+  <li class="list"><a class="link" href="#news">News</a></li>
+  <li class="list"><a class="link" href="#contact">Contact</a></li>
+  <li class="list"><a class="link" href="#about">About</a></li>
+</div>
     </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
-    </section>
+    <div class="intro">
+        <img class="main-photo" src="https://images.unsplash.com/photo-1587899158320-eced0d5f91d1?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Nnx8a2l2aWt8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="intro-photo">        <div class="main-story">Welcome to Skane!</div>
+    </div>
+  
+    <div class="card-container">
+      <div class="card">
+         <img class="card-photo" src="https://images.unsplash.com/photo-1618720478692-abab0ff1ae50?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8a2l2aWt8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="kivik">
+         <h3 class="card-name"> kivik</h3> 
+         <p class="card-description">
+            Stenshuvud National park has the best beach you'll ever find.
+          </p>
+      </div>
+      <div class="card">
+          <img class="card-photo" src="https://images.unsplash.com/photo-1618720478692-abab0ff1ae50?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8a2l2aWt8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="kivik">
+          <h3 class="card-name"> kivik</h3> 
+          <p class="card-description">
+             Stenshuvud National park has the best beach you'll ever find.
+           </p>
+      </div>
+      <div class="card">
+        <img class="card-photo" src="https://images.unsplash.com/photo-1618720478692-abab0ff1ae50?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8a2l2aWt8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="kivik">
+        <h3 class="card-name"> kivik</h3> 
+        <p class="card-description">
+           Stenshuvud National park has the best beach you'll ever find.
+         </p>
+     </div>
+     <div class="card">
+         <img class="card-photo" src="https://images.unsplash.com/photo-1618720478692-abab0ff1ae50?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8a2l2aWt8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="kivik">
+         <h3 class="card-name"> kivik</h3> 
+         <p class="card-description">
+            Stenshuvud National park has the best beach you'll ever find.
+          </p>
+     </div>
+     <div class="card">
+      <img class="card-photo" src="https://images.unsplash.com/photo-1618720478692-abab0ff1ae50?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8a2l2aWt8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="kivik">
+      <h3 class="card-name"> kivik</h3> 
+      <p class="card-description">
+         Stenshuvud National park has the best beach you'll ever find.
+       </p>
+   </div>
+   <div class="card">
+       <img class="card-photo" src="https://images.unsplash.com/photo-1618720478692-abab0ff1ae50?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8a2l2aWt8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="kivik">
+       <h3 class="card-name"> kivik</h3> 
+       <p class="card-description">
+          Stenshuvud National park has the best beach you'll ever find.
+        </p>
+   </div>
+   <div class="card">
+    <img class="card-photo" src="https://images.unsplash.com/photo-1618720478692-abab0ff1ae50?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8a2l2aWt8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="kivik">
+    <h3 class="card-name"> kivik</h3> 
+    <p class="card-description">
+       Stenshuvud National park has the best beach you'll ever find.
+     </p>
+  </div>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
+        <!-- <div class="card">
+        <img src="https://images.unsplash.com/photo-1590692750735-48193f50f2a0?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8eXN0YWR8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="ystad">
+        <p>
+          Ystad is full of traditional houses.
+        </p>
+      </div>
+        <div class="card">
+        <img src="https://images.unsplash.com/photo-1486375680560-d2653bf9c829?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Mnx8YnJhbnRldmlrfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="brantevik">
+        <p>
+          A small but beautiful fishing village in Skane.
+        </p>
+      </div>
+        <div class="card"> Ales-stenar
+          <img src="https://images.unsplash.com/photo-1554746532-17e04f6b0d2d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1018&q=80" alt="stenar"/>
+          <p>
+            You can see beautiful stones
+          </p>
+        </div> -->
+     </div>
+    
+      <div class="footer">
+        <img src="https://api.freelogodesign.org/files/0e9d86503a3347658bd26c0c21f3fbfd/thumb/logo_200x200.png?v=0" alt="footer logo"/>
+      </div>
   </body>
+ 
 </html>
