--- a/code/index.html
+++ b/code/index.html
@@ -8,51 +8,134 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
-    <header>
-      <!-- a header wih a site name, a logo and a navbar -->
-      <a href="#" >
-        <img class="logo" src="./logo.svg" alt="Technigo" />
-      </a>
-      <h1 class="page-title">This awesome news site</h1>
-      <nav>
-        <p class="nav-bar">
-          <a class="hover" href="#">About</a>
-          <a class="hover" href="#">Contact</a>
-          <a class="hover" href="#">Subscribe</a>
-        </p>
-      </nav>
-    </header>
+    <div class="container">
+      <header>
+        <!-- a header wih a site name, a logo and a navbar -->
+        <a href="#" >
+          <img class="logo" src="./logo.svg" alt="Technigo" />
+        </a>
+        <h1 class="page-title">This awesome news site</h1>
+        <nav>
+          <p class="nav-bar">
+            <a class="hover" href="#">About</a>
+            <a class="hover"href="#">Contect</a>
+            <a class="hover"href="#">Subscribe</a>
+          </p>
+        </nav>
+      </header>
 
-      <section class="big-news-container">
         <!-- The big news content -->
-        <div class="big-news">
-          <h2>My big news</h2>
+      <section>
+        <div class="row-block">
+          <div class="big-news-image" style="background-image: url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);">
+          </div>
+            <div class="big-news-text">
+              <h2>An eyecatching heading</h2>
+              <p>Have a look at <b>A space princess</b> any many more beautiful photos by Kristina Alexanderson. </p>
+          </div>
         </div>
       </section>
-        
-      <section class="small-news-container">
         <!-- The other news  -->
-        <div class="small-news">
-        <h2>My small news 1</h2>
-      </div>
-      <div class="small-news">
-        <h2>My small news 2</h2>
-      </div>
-      <div class="small-news">
-        <h2>My small news 3</h2>
-        </div>
-      <div class="small-news">
-        <h2>My small news 4</h2>
-        </div>
-      <div class="small-news">
-        <h2>My small news 5</h2>
-        </div>
-      <div class="small-news">
-        <h2>My small news 6</h2>
-        </div>
-      <div class="small-news">
-        <h2>My small news 7</h2>
-        </div>
-      </section>
-  </body>
+      <section>
+        <div class="news-container">
+          <div class="item-1">
+            <a href="https://www.flickr.com/photos/kalexanderson/44773047394/" class="card">
+              <div class="thumbnail" style="background-image: url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);"></div>
+                <article>
+                  <h2>A space princess</h2><span>Kristina Alexanderson</span>
+                </article>
+            </a>
+          </div>
+          <div class="item-2">
+            <a href="https://www.flickr.com/photos/kalexanderson/44773047394/" class="card">
+              <div class="thumbnail" style="background-image: url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);"></div>
+                <article>
+                  <h2>A space princess</h2><span>Kristina Alexanderson</span>
+                </article>
+            </a>
+          </div>
+          <div class="item-3">
+            <a href="https://www.flickr.com/photos/kalexanderson/44773047394/" class="card">
+              <div class="thumbnail" style="background-image: url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);"></div>
+                <article>
+                  <h2>A space princess</h2><span>Kristina Alexanderson</span>
+                </article>
+            </a>
+          </div>
+          <div class="item-4">
+            <a href="https://www.flickr.com/photos/kalexanderson/44773047394/" class="card">
+              <div class="thumbnail" style="background-image: url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);"></div>
+                <article>
+                  <h2>A space princess</h2><span>Kristina Alexanderson</span>
+                </article>
+            </a>
+          </div>
+          <div class="item-5">
+            <a href="https://www.flickr.com/photos/kalexanderson/44773047394/" class="card">
+              <div class="thumbnail" style="background-image: url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);"></div>
+                <article>
+                  <h2>A space princess</h2><span>Kristina Alexanderson</span>
+                </article>
+            </a>
+          </div>
+          <div class="item-6">
+            <a href="https://www.flickr.com/photos/kalexanderson/44773047394/" class="card">
+              <div class="thumbnail" style="background-image: url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);"></div>
+                <article>
+                  <h2>A space princess</h2><span>Kristina Alexanderson</span>
+                </article>
+            </a>
+          </div>
+          <div class="item-7">
+            <a href="https://www.flickr.com/photos/kalexanderson/44773047394/" class="card">
+              <div class="thumbnail" style="background-image: url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);"></div>
+                <article>
+                  <h2>A space princess</h2><span>Kristina Alexanderson</span>
+                </article>
+            </a>
+          </div>
+          <div class="item-8">
+            <a href="https://www.flickr.com/photos/kalexanderson/44773047394/" class="card">
+              <div class="thumbnail" style="background-image: url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);"></div>
+                <article>
+                  <h2>A space princess</h2><span>Kristina Alexanderson</span>
+                </article>
+            </a>
+          </div>
+          <div class="item-9">
+            <a href="https://www.flickr.com/photos/kalexanderson/44773047394/" class="card">
+              <div class="thumbnail" style="background-image: url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);"></div>
+                <article>
+                  <h2>A space princess</h2><span>Kristina Alexanderson</span>
+                </article>
+            </a>
+          </div>
+          <div class="item-10">
+            <a href="https://www.flickr.com/photos/kalexanderson/44773047394/" class="card">
+              <div class="thumbnail" style="background-image: url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);"></div>
+                <article>
+                  <h2>A space princess</h2><span>Kristina Alexanderson</span>
+                </article>
+            </a>
+          </div>
+          <div class="item-11">
+            <a href="https://www.flickr.com/photos/kalexanderson/44773047394/" class="card">
+              <div class="thumbnail" style="background-image: url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);"></div>
+                <article>
+                  <h2>A space princess</h2><span>Kristina Alexanderson</span>
+                </article>
+            </a>
+          </div>
+          <div class="item-12">
+            <a href="https://www.flickr.com/photos/kalexanderson/44773047394/" class="card">
+              <div class="thumbnail" style="background-image: url(https://live.staticflickr.com/1945/44773047394_c8770f0ea0_w.jpg);"></div>
+                <article>
+                  <h2>A space princess</h2><span>Kristina Alexanderson</span>
+                </article>
+            </a>
+          </div>
+        </section>
+    </div>
+ </body>
 </html>
+
